<?xml version="1.0"?>
<package format="3">
  <name>robotiq_ft_sensor</name>
  <version>1.0.0</version>
  <description>Package for reading data from a Robotiq Force Torque Sensor</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author email="jsavoie20@gmail.com">Jonathan Savoie</author>
  <url type="website">http://ros.org/wiki/robotiq</url>

  <license>BSD</license>
  
	<buildtool_depend>ament_cmake</buildtool_depend>
 

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <!-- <build_depend>std_msgs</build_depend> -->
  
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <!-- <exec_depend>rclcpp</exec_depend> -->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
